# cp-with-usrbio

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.sh  examples.sh  run_example.sh
.claude/: settings.local.json
hf3fs-usrbio-sys/: Cargo.toml  README.md  build.rs
hf3fs-usrbio-sys/src/: lib.rs
src/: cli.rs  copier.rs  main.rs  managed_fd.rs  pipeline.rs  progress.rs  shm_manager.rs  task.rs  utils.rs  worker_context.rs
