[package]
name = "cp-with-usrbio"
version = "0.1.0"
edition = "2021"

[dependencies]
hf3fs-usrbio-sys = { path = "/root/code/3fs/src/lib/rs/hf3fs-usrbio-sys" }
clap = { version = "4", features = ["derive"] }
shared_memory = "0.12.4"
uuid = { version = "1.13.2", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
crossbeam = "0.8"
num_cpus = "1.16"
indicatif = "0.17"
walkdir = "2.5"
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
