[package]
name = "hf3fs-usrbio-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["cp-with-usrbio Contributors"]
description = "Rust bindings for 3FS USRBIO API"
repository = "https://github.com/xxsoul/cp-with-usrbio"
keywords = ["3fs", "usrbio", "bindings", "ffi"]
categories = ["external-ffi-bindings"]

[dependencies]
shared_memory = "0.12.4"
uuid = { version = "1.13.2", features = ["v4"] }

[build-dependencies]
bindgen = "0.71"
